@@ -1,3 +1,4 @@
 EBUILD qutim-weather-0.2.9999.ebuild 1031 RMD160 f993966bf656aa180d81e82d6295495d190677c0 SHA1 ea2e7f89e792039fb460eb13c73278c7562126db SHA256 aa77677e418d39b0a890674b9469e44f5787c647d66c5c4090331e01d170f2d6
-MISC ChangeLog 280 RMD160 5d2c83caa60dee86d0c931af2a01baeca8ca75d4 SHA1 41e47680354634bfbf8a608f9739df7dfbcaac38 SHA256 ecf486de731b72a7940731d2df6ec493e231e019d2e5095636eb085dabd9b3fc
+EBUILD qutim-weather-0.3.9999.ebuild 958 RMD160 8b75804e0290efb52fd61abf2bb6ca055e602a90 SHA1 49c4afdc66a218530b342fefb2e824658f32e50a SHA256 2416bee30eed0b0ad09601128dfa16d4d035d6a4a4aee86c11364ee4757734fe
+MISC ChangeLog 435 RMD160 f51b1e1aea9c302a9b63e6aae06e684dce865551 SHA1 cd853152401ce1fd518c32f90be50b96aaa8d555 SHA256 0557883f5b80bc1e672d643f808d23298bb2c94846a8bf347ce82b8701757ff6
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
