@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qutim-weather-0.3.9999 (28 Jun 2010)
+
+  28 Jun 2010; Viktor Lazarev <taurus101v@gmail.com>
+  +qutim-weather-0.3.9999.ebuild:
+  nev version of the ebuild
+
   18 May 2010; Viktor Lazarev <taurus101v@gmail.com>
   qutim-weather-0.2.9999.ebuild, +metadata.xml:
   repoman payment, added ChangeLog and metadata.xml
